src/app/blogs/[slug]/mdx.css
@reference "../../globals.css";

@layer components {
  .content {
    /* For general text, unless specified otherwise */
    @apply text-neutral-800 dark:text-neutral-300;
  }

  .content pre code[data-theme] {
    background-color: var(--shiki-light-bg);
  }

  .content pre code[data-theme] span {
    color: var(--shiki-light);
    font-weight: var(--shiki-light-font-weight, normal);
    text-decoration: var(--shiki-light-text-decoration, unset);
  }

  html.dark .content pre code[data-theme] {
    background-color: var(--shiki-dark-bg);
  }

  html.dark .content pre code[data-theme] span {
    color: var(--shiki-dark);
    text-decoration: var(--shiki-dark-text-decoration, unset);
    font-weight: var(--shiki-dark-font-weight, normal);
  }

  .content h1 {
    @apply content-container;
    @apply text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl;
    @apply font-bold lg:font-black;
    @apply text-neutral-950 dark:text-neutral-50;
  }

  .content h2 {
    @apply content-container;
    @apply text-lg sm:text-lg md:text-xl lg:text-2xl xl:text-3xl;
    @apply font-bold lg:font-black;
    @apply text-neutral-950 dark:text-neutral-50;
  }

  .content h3 {
    @apply content-container;
    @apply text-base sm:text-lg;
    @apply font-bold lg:font-black;
    @apply text-neutral-950 dark:text-neutral-50;
  }

  .content p {
    @apply content-container;
    @apply mb-12;
    @apply text-sm leading-6 sm:text-base sm:leading-9;
  }

  .content blockquote {
    @apply content-container relative;
    @apply mb-12 p-4;
    @apply bg-neutral-200 dark:bg-neutral-800;
    @apply border-l-4 border-neutral-300 dark:border-neutral-600;
  }

  .content blockquote p {
    @apply w-auto;
    @apply mb-4 lg:mb-6;
    @apply text-sm leading-6 sm:text-base sm:leading-9;
    @apply mr-0 ml-0;
  }

  .content blockquote p:last-child {
    @apply mb-0;
  }

  .content strong {
    @apply font-bold;
    @apply text-black dark:text-white;
  }

  .content > section.footnotes > ol,
  .content > section.footnotes > ul,
  .content > ul,
  .content > ol {
    @apply content-container md:ml-(--article-gutter-size);
    @apply mb-12 pl-4;
  }

  .content > ul li > ul,
  .content > ul li > ol,
  .content > ol li > ul,
  .content > ol li > ol {
    @apply mb-4 pl-4;
  }

  .content > ul li > ul li {
    @apply list-[square];
  }

  .content li {
    @apply ml-4 pl-2 lg:ml-7 lg:pl-4;
    @apply text-sm leading-6 sm:text-base sm:leading-9;
    @apply wrap-break-word;
  }

  .content li p {
    @apply m-0 p-0;
    @apply leading-6;
    @apply mb-3 lg:mb-5;
  }

  .content ul li {
    @apply list-disc;
  }

  .content ol li > ul li {
    @apply list-disc;
  }

  .content ol li {
    @apply list-decimal;
  }

  .content section.footnotes li p {
    @apply w-full;
    @apply wrap-break-word whitespace-break-spaces;
    @apply leading-6;
  }

  .content pre {
    @apply content-container;
    @apply mb-12;
    @apply text-sm sm:text-base;
    @apply rounded-lg border border-neutral-300 dark:border-neutral-600;
    @apply [counter-reset:line];
    @apply relative overflow-x-hidden;
  }

  .content pre .menubar {
    @apply bg-neutral-200/75 dark:bg-neutral-500/15;
    @apply rounded-t-lg;
    @apply flex items-center justify-between;
    @apply border-b dark:border-neutral-600;
    @apply h-12 px-2;
  }

  .content pre .filename {
    @apply flex items-center gap-1;
    @apply text-neutral-700 dark:text-neutral-300;
    @apply text-xs md:text-base;
  }

  .content pre .copy-button {
    @apply text-neutral-700 dark:text-neutral-300;
    @apply bg-neutral-200/0 dark:bg-neutral-400/0;
    @apply p-2;
    @apply inline-flex items-center justify-center;
    @apply cursor-pointer;
    @apply transition-colors duration-300 ease-in-out;
    @apply rounded-md;
    @apply shadow-none;
  }

  .content pre .copy-button:hover {
    @apply text-neutral-900 dark:text-neutral-100;
    @apply bg-neutral-300/50 dark:bg-neutral-400/30;
  }

  .content pre .copy-button:active {
    @apply text-neutral-900 dark:text-neutral-100;
    @apply bg-neutral-200 dark:bg-neutral-400/50;
  }

  .content pre code {
    @apply relative grid p-4 text-left break-normal whitespace-pre;
    @apply text-xs leading-5! md:text-sm;
    @apply overflow-x-auto;
    @apply wrap-break-word;
  }

  .content pre code[data-line-numbers] {
    @apply [counter-reset:line];
  }

  .content pre code[data-line-numbers] > [data-line]::before {
    @apply content-[counter(line)] [counter-increment:line];
    @apply mr-8 inline-block w-4 text-right;
    @apply text-neutral-400 dark:text-neutral-500;
  }

  .content pre code[data-line-numbers-max-digits="2"] > [data-line]::before {
    @apply w-5;
  }

  .content pre code[data-line-numbers-max-digits="3"] > [data-line]::before {
    @apply w-6;
  }

  .content pre code[data-line-numbers-max-digits="4"] > [data-line]::before {
    @apply w-7;
  }

  .content [data-line].diff,
  .content [data-highlighted-line] {
    @apply -mx-4 px-4;
    @apply relative;
  }

  .content [data-line].diff,
  .content [data-highlighted-line] {
    @apply bg-slate-400/20 dark:bg-slate-500/30!;
    @apply border-l-2 border-slate-700 dark:border-slate-200;
  }

  .content [data-line].diff::after,
  .content [data-highlighted-line]::after {
    @apply absolute top-0 left-0;
  }

  .content
    pre
    code[data-line-numbers-max-digits="2"]
    > [data-line].diff::after {
    @apply left-10;
  }

  .content
    pre
    code[data-line-numbers-max-digits="3"]
    > [data-line].diff::before {
    @apply left-[2.75];
  }

  .content
    pre
    code[data-line-numbers-max-digits="4"]
    > [data-line].diff::before {
    @apply left-12;
  }

  .content [data-line].diff::after {
    @apply content-[''];
    @apply mr-6 inline-block w-4 text-right;
    @apply text-black dark:text-white;
  }

  .content [data-line].diff.add::after {
    @apply content-['+'];
  }

  .content [data-line].diff.remove::after {
    @apply content-['-'];
  }

  .content [data-line].diff.add {
    @apply bg-green-500/20! dark:bg-green-600/20!;
    @apply border-green-500! dark:border-green-400;
  }

  .content [data-line].diff.remove {
    @apply bg-red-500/20! dark:bg-red-700/20!;
    @apply border-red-500! dark:border-red-400;
  }

  .content table {
    @apply content-container;
    @apply mb-12;
  }

  /* For inline code tag */
  .content code:not(pre code) {
    @apply bg-neutral-200 text-neutral-700;
    @apply before:content-none after:content-none;
    @apply rounded-md px-1 py-0.5;
    @apply border border-neutral-300 dark:border-neutral-600;
    @apply dark:bg-neutral-800 dark:text-neutral-200;
    @apply not-italic;
  }

  .content code:is(a code) {
    @apply border-lime-500 dark:border-lime-700;
    @apply bg-lime-400/10 dark:bg-lime-700/20;
    @apply text-lime-500 dark:text-lime-500;
    @apply px-1.5 py-1;
    @apply hover:[&>span]:border-lime-500;
  }

  .content code:is(a code) span {
    @apply border-b border-transparent;
  }

  .content h1,
  .content h2,
  .content h3 {
    @apply scroll-mt-24;
    @apply scroll-smooth;
  }

  .content .anchor {
    @apply before:content-none after:content-none;
    @apply ml-2;
    @apply inline-flex;
  }

  .content h1 .anchor {
    @apply text-lime-500/0 dark:text-lime-400/0;
    @apply transition-colors duration-300;
  }

  .content h1:hover .anchor {
    @apply text-lime-500 dark:text-lime-400;
  }

  .content h2 .anchor {
    @apply text-sky-500/0 dark:text-sky-400/0;
    @apply transition-colors duration-300;
  }

  .content h2:hover .anchor {
    @apply text-sky-500 dark:text-sky-400;
  }
  .content h3 .anchor {
    @apply text-amber-500/0 dark:text-amber-400/0;
    @apply transition-colors duration-300;
  }

  .content h3:hover .anchor {
    @apply text-amber-500 dark:text-amber-400;
  }

  .content small {
    @apply content-container;
    @apply block italic;
    @apply px-4;
    @apply -mt-8 mb-12;
  }

  .title {
    @apply mx-0 px-(--gutter-size) sm:mx-auto sm:px-0;
    @apply w-full max-w-2xl;
    @apply text-base sm:text-lg md:text-xl lg:text-2xl xl:text-3xl;
    @apply font-bold lg:font-black;
    @apply text-neutral-950 dark:text-neutral-50;
  }

  .content .callout {
    @apply content-container;
    @apply mb-12;
  }

  .content li > .callout {
    @apply mb-5 lg:mb-8;
  }

  .content .callout * {
    @apply mx-0;
  }

  .content .callout *:last-child {
    @apply mb-0;
  }

  .content .callout p,
  .content .callout pre {
    @apply w-full;
  }

  .content .callout h3 {
    @apply w-full;
  }

  .content .callout button {
    @apply text-xl md:text-2xl;
    @apply font-bold lg:font-black;
    @apply text-neutral-950 dark:text-neutral-50;
  }

  .content .callout button:disabled svg:not(.callout-icon) {
    @apply invisible hidden opacity-0;
  }

  .mermaid rect.actor {
    @apply fill-neutral-200! dark:fill-neutral-800!;
    @apply stroke-neutral-500! dark:stroke-neutral-200!;
  }

  .mermaid text.actor > tspan {
    @apply text-neutral-800! dark:text-neutral-100!;
    @apply fill-neutral-800! dark:fill-neutral-100!;
  }

  .mermaid line {
    @apply stroke-neutral-400! dark:stroke-neutral-200!;
    @apply fill-neutral-400! dark:fill-neutral-200!;
  }

  .mermaid .messageLine0[marker-end="url(#crosshead)"] {
    @apply stroke-red-400! dark:stroke-red-600!;
  }

  .mermaid .messageLine1 {
    @apply stroke-neutral-400! dark:stroke-neutral-200!;
  }

  .mermaid .messageText {
    @apply stroke-none;
    @apply fill-neutral-800! dark:fill-neutral-200!;
  }

  .mermaid .loopText > tspan {
    @apply stroke-none;
    @apply fill-neutral-800! dark:fill-neutral-200!;
  }

  .mermaid #arrowhead path {
    @apply stroke-neutral-400! dark:stroke-neutral-200!;
    @apply fill-neutral-400! dark:fill-neutral-200!;
  }

  .mermaid #crosshead path {
    @apply stroke-red-400! dark:stroke-red-600!;
    @apply fill-red-400! dark:fill-red-600!;
  }

  .mermaid #sequencenumber {
    @apply fill-neutral-500! dark:fill-neutral-200!;
  }

  .mermaid text.sequenceNumber {
    @apply fill-neutral-200! dark:fill-neutral-800!;
  }

  .mermaid rect.activation0 {
    @apply fill-neutral-200! dark:fill-neutral-700!;
    @apply stroke-neutral-500! dark:stroke-neutral-200!;
  }

  .mermaid .labelBox {
    @apply fill-neutral-200! dark:fill-neutral-800!;
    @apply stroke-neutral-300! dark:stroke-neutral-200!;
  }

  .mermaid .labelText {
    @apply fill-neutral-800! dark:fill-neutral-200!;
  }

  .mermaid .packetBlock {
    @apply fill-neutral-200! dark:fill-neutral-800!;
    @apply stroke-neutral-300! dark:stroke-neutral-200!;
  }

  .mermaid .packetLabel {
    @apply fill-neutral-800! dark:fill-neutral-200!;
  }

  .mermaid .packetByte {
    @apply fill-neutral-800! dark:fill-neutral-200!;
  }

  .katex-display {
    @apply content-container!;
    @apply mb-8! pt-2! pb-2!;
    @apply text-sm leading-6 sm:text-base sm:leading-9;
    @apply overflow-x-auto;
  }
}

